--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "app/(tabs)/index.jsx"  ]
+    "expo-env.d.ts", 
+    "app/(inicio)/index.js",
+  ],
 }
