--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "undefined": "expo-router/ui"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
